--- a/catalog.html
+++ b/catalog.html
@@ -3,57 +3,43 @@
   <head>
     <meta charset="utf-8">
      <link rel="stylesheet" href="styles/style.css">
-      <title>Седона</title>
   </head>
+
 <!-- Конец шапки -->
+
   <body>
    <header class="page-header">
-    <a href="logo"><img src="image.jpg" height="55" width="67" alt="Логотип."></a>
+    <a><img src="logo.svg" height="55" width="67" alt="Логотип."></a>
+
 <!-- Начало навигации -->
+
      <nav class="navigation">
        <ul class="navigation-list">
         <li class="navigation-item">
          <a class="navigation-link" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
-         <a class="navigation-link" href="#">О Cедоне</a>
+         <a class="navigation-link" href="index.html">О Cедоне</a>
         </li>
         <li class="navigation-item">
          <a class="navigation-link" href="#">Гостиницы</a>
         </li>
         </ul>
+
 <!-- Навигация поиска -->
+
         <ul class="navigation-list">
+          <div class="search">
           <li class="navigation-item">
-           <a class="navigation-link" href="#">
+           <a class="navigation-link" href="#search">
             <span class="visually-hidden">
             Поиск.
             </span>
-<!-- Модальное окно начало -->
-                      <h2>Поиск гостиницы в Седоне</h2>
-                       <button type="button" class="close">
-                        <svg></svg>
-                     </button>
-                    </div>
-                      <label for="start">Дата заезда:</label><input type="date" id="start" name="trip-start" value="2023-07-22" min="2023-01-01" max="2024-01-01">
-                        <p>Мы не можем отправить вас в прошлое.</p>
-                      <label for="start">Дата выезда:</label><input type="date" id="start" name="trip-start" value="2023-07-22" min="2023-01-01" max="2024-01-01">
-                        <p>На эти даты есть свободные номера. Пока есть.</p>
-                      <p>
-                        <label for="age">Взрослые:</label>
-                          <input type="number" step="1" min="1" max="100" value="10" id="age" name="age">
-                        <label for="age">Дети:</label>
-                         <input type="number" step="1" min="1" max="100" value="10" id="age" name="age">
-                    </p>
-                    <p>
-                        <button type="submit">Найти</button>
-                    </p>
-                  </div>
-                </div>
-             </div>
-           </a>
-        </li>
-<!-- Конец модального окна -->
+            </a>
+            </li>
+      </div>
+
+      <div class="favorites">
       <li class="navigation-item">
        <a class="navigation-link" href="#">
         <span class="visually-hidden">
@@ -61,39 +47,46 @@
        </span>
       </a>
     </li>
+    <div class="requestbutton">
       <li class="navigation-item">
-        <a class="navigation-link" href="#">
-      </a>
-      <button type="submit" value="Хочу сюда!"></button>
+      <button type="button">Хочу сюда!</button>
       </li>
+      </div>
      </ul>
    </nav>
   </header>
+
 <!-- Конец хедера -->
+
         <main>
         <h1>Гостиницы Седоны</h1>
          <ul class="navigation-list">
-         <a href="index.html"><img src="image.png" width="12" height="12" alt="ДомЛого."></a>
-         <a class="navigation-link" href="index.html">Главная</a>
-       </ul>
+          <div class="home">
+            <div class="arrow">
+         <a class="navigation-link" href="index.html">Гостиницы</a>
+          </div>
+          </div>
+         </ul>
+
 <!-- Поиск начало -->
+
           <section>
            <div>
             <p>Инфраструктура</p>
-             <input type="checkbox"checked><label for="name">Бассейн</label>
+             <input type="checkbox" checked><label for="name">Бассейн</label>
              <input type="checkbox"><label for="name">Парковка</label>
              <input type="checkbox"><label for="name">Wi-Fi</label>
           </div>
           <div>
             <p>Тип Жилья:</p>
-             <input type="radio" name="house-type" id="hotel-field"checked><label>Гостиница</label>
-             <input type="radio" name="house-type" id="motel-field"><label>Мотель</label>
-             <input type="radio" name="house-type" id="apartaments-field"><label>Апартаменты</label>
+             <input type="radio" name="house-type-hotel" id="hotel-field" checked><label>Гостиница</label>
+             <input type="radio" name="house-type-motel" id="motel-field"><label>Мотель</label>
+             <input type="radio" name="house-type-apartaments" id="apartaments-field"><label>Апартаменты</label>
             </div>
             <div>
             <p>Стоимость,₽</p>
-             <input type="text" name="appointment-price" id="appointment-task" placeholder="от">
-             <input type="text" name="appointment-price" id="appointment-task" placeholder="до">
+             <input type="text" name="appointment-price-from" id="appointment-task-from" placeholder="от">
+             <input type="text" name="appointment-price-to" id="appointment-task-to" placeholder="до">
              <input type="range">
            </div>
             <div>
@@ -101,24 +94,30 @@
              <button type="reset" value="сбросить"></button>
             </div>
           </section>
+
 <!-- Поиск конец формы -->
+
           <section>
             <div>
         <h2>Найдено гостиниц:38</h2>
-        <select "user_profile_color_1">
+        <select>
           <option value="1">Сначала популярное</option>
           <option value="2">Сначала дешевые</option>
           <option value="3">Сначала дорогое</option>
+          <img src="images/vector-7.svg">
+        </select>
           <ul>
           <li>
-            <a class="navigation-button" href="#">вектор</a>
-            <a class="navigation-button" href="#">вектор</a>
-            <a class="navigation-button" href="#">вектор</a>
+            <a href="#"><img src="images/view.svg"></a>
+            <a href="#"><img src="images/view-1.svg"></a>
+            <a href="#"><img src="images/view-2.svg"></a>
           </li>
           </ul>
         </div>
           </section>
+
 <!-- Список гостиниц -->
+
           <section>
        <h2 class="visually-hidden">Список страниц</h2>
       <ul>
@@ -126,28 +125,37 @@
         <img src="images/hotel-1.jpg" width="300" height="212" alt="Пейзаж.">
       <h3>Amara Resort & Spa</h3>
        <p>Гостиница</p><p>От 4000 ₽</p>
-        <button class="btn">Подробнее</button><button class="btn">В избранное</button>
+        <button class="button">Подробнее</button>
+        <button class="button">В избранное</button>
          <p>Рейтинг:8,5</p>
+         <div class="star"></div>
+      </li>
        <li>
         <img src="images/hotel-2.jpg" width="300" height="212" alt="Пейзаж.">
        <h3>Villas at Poco Diablo</h3>
-        <span>Гостиница</span><span>От 5000 ₽</span>
-         <button class="btn">Подробнее</button><button class="btn"disabled>В избранном</button>
+        <p>Гостиница</p><p>От 5000 ₽</p>
+         <button class="button">Подробнее</button>
+         <button class="button" disabled>В избранном</button>
           <p>Рейтинг:9,2</p>
+          <div class="star"></div>
        </li>
        <li>
         <img src="images/hotel-3.jpg" width="300" height="212" alt="Пейзаж.">
         <h3>Desert Quail Inn</h3>
          <p>Гостиница</p><p>От 2500 ₽</p>
-          <button class="btn">Подробнее</button><button class="btn">В избранное</button>
+          <button class="button">Подробнее</button>
+          <button class="button">В избранное</button>
           <p>Рейтинг:6,9</p>
+          <div class="star"></div>
       </li>
       <li>
         <img src="images/hotel-4.jpg" width="300" height="212" alt="Пейзаж.">
        <h3>GreenTree Inn</h3>
         <p>Гостиница</p><p>От 1500 ₽</p>
-        <button class="btn">Подробнее</button><button class="btn">В избранное</button>
+        <button class="button">Подробнее</button>
+        <button class="button">В избранное</button>
          <p>Рейтинг:5,0</p>
+         <div class="star"></div>
         </li>
          <ul class="pagination">
         <li><a href="#">1</a></li>
@@ -156,9 +164,10 @@
         <li><a href="#">4</a></li>
         <li><a href="#">5</a></li>
       </ul>
-      </ul>
        </section>
+
 <!-- Начало формы подписки -->
+
   <section>
     <h2 class="appointment-title">Подпишитесь на рассылку</h2>
       <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
@@ -168,31 +177,34 @@
     </form>
   </section>
   </main>
+
 <!-- Начало социальные сети -->
-  <footer>
-    <section class="footer-social">
-      <ul class="footer-social-list">
-       <li class="footer-social-item">
-      <a class="button" href="#">
-    <span class="visually-hidden">VK</span>
-  </a>
-  </li>
-<li class="footer-social-item">
-      <a class="button" href="#">
-       <span class="visually-hidden">Telegram</span>
-  </a>
-</li>
-<li class="footer-social-item">
-     <a class="button" href="#">
-      <span class="visually-hidden">YouTube</span>
-     </a>
-  </li>
- </ul>
-</section>
+
+<footer>
+  <section class="footer-social">
+    <ul class="footer-social-list">
+      <li class="footer-social-item">
+          <span class="visually-hidden"></span>
+          <img src="images/social-2.svg" alt="vk.">
+      </li>
+
+      <li class="footer-social-item">
+          <span class="visually-hidden"></span>
+          <img src="images/social-3.svg" alt="tg.">
+      </li>
+
+      <li class="footer-social-item">
+          <span class="visually-hidden"></span>
+          <img src="images/social-1.svg" alt="yt.">
+      </li>
+    </ul>
+  </section>
+
 <!-- Список контакты -->
+
 <section class="contacts">
-   <a class="contacts-phone" href="tel:+78128121212">7 812 812-12-12</a>
-    <a href="logo"><img src="images/logo_htmlacademy.svg" width="115" height="33" alt="Логотип."></a>
+   <a class="contacts-phone" href="tel:+78128121212">+7(812)-12-12</a>
+    <a href="logo"><img src="images/logo-htmlacademy.svg" width="115" height="33" alt="Логотип."></a>
 </section>
   </footer>
  </body>
