--- a/index.html
+++ b/index.html
@@ -1,177 +1,213 @@
 <!DOCTYPE html>
- <html lang="ru">
+<html lang="ru">
+
   <head>
     <meta charset="utf-8">
-     <link rel="stylesheet" href="styles/style.css">
-      <title>Седона</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
-<!-- Конец шапки -->
-   <body>
+
+  <!-- Конец шапки -->
+
+  <body>
     <header class="page-header">
-     <a href="logo"><img src="" width="1200" height="485" alt="Логотип."></a>
-<!-- Начало навигации -->
+       <a href="#"><img src="logo.svg" width="120" height="55" alt="logo."></a>
+
+      <!-- Начало навигации -->
+
       <nav class="navigation">
+
         <ul class="navigation-list">
-         <li class="navigation-item">
-          <a class="navigation-link" href="index.html">Главная</a>
-         </li>
-         <li class="navigation-item">
-          <a class="navigation-link" href="#">О Cедоне</a>
-         </li>
-         <li class="navigation-item">
-          <a class="navigation-link" href="catalog.html">Гостиницы</a>
-         </li>
-         </ul>
-<!-- Навигация поиска -->
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Cедоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+          </li>
+        </ul>
+
+        <!-- Навигация поиска -->
+
         <ul class="navigation-list">
-         <li class="navigation-item">
-          <a class="navigation-link" href="#">
-          <span class="visually-hidden">
-          Поиск.
-        </span>
-<!-- Модальное окно начало -->
-                  <h2>Поиск гостиницы в Седоне</h2>
-                     <button type="button" class="close">Close</button>
-                      <button type="button" class="close">
-                     <svg></svg>
-                 </button>
-                </div>
-                  <label for="start">Дата заезда:</label><input type="date" id="start" name="trip-start" value="2023-07-22" min="2023-01-01" max="2024-01-01">
-                    <p>Мы не можем отправить вас в прошлое.</p>
-                  <label for="start">Дата выезда:</label><input type="date" id="start" name="trip-start" value="2023-07-22" min="2023-01-01" max="2024-01-01">
-                     <p>На эти даты есть свободные номера. Пока есть.</p>
-                 <p>
-                    <label for="age">Взрослые:</label>
-                     <input type="number" step="1" min="1" max="100" value="10" id="age" name="age">
-                    <label for="age">Дети:</label>
-                     <input type="number" step="1" min="1" max="100" value="10" id="age" name="age">
-                  </p>
-                  <p>
-                      <button type="submit">Найти</button>
-                  </p>
-              </div>
+          <div class="search">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#search"><img src="images">
+              <span class="visually-hidden">
+                Поиск.
+            </span>
+            </a>
+          </li>
+        </div>
+
+          <!-- Конец модального окна -->
+
+          <li class="navigation-item">
+            <div class="favorites">
+            <a class="navigation-link" href="#">
+              <span class="visually-hidden">
+                Избранное.
+              </span>
+            </a>
             </div>
-          </div>
+          </li>
+
+        <div class="request-button">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+            <button type="button">Хочу сюда!</button>
+          </li>
         </a>
-      </li>
-<!-- Конец модального окна -->
-        <li class="navigation-item">
-         <a class="navigation-link" href="Избранное.">
-          <span class="visually-hidden">
-         </span>
-      </a>
-    </li>
-    <li class="navigation-item">
-     <a class="navigation-link" href="#"></a>
-    <button type="submit" value="Хочу сюда!"></button>
-    </li>
-  </ul>
- </nav>
-</header>
-<!-- Конец шапки -->
+        </div>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- Конец шапки -->
+
     <main>
       <main class="main-index">
+        <div class="welcome">
         <h1 class="visually-hidden">Седона</h1>
-        <img src="images/index-background.jpg" width="1200" height="485" alt="ГлавЛого.">
-        <img src="images/sedonatxt.jpg" width="1200" height="261" alt="ТекстСедона1.">
+        <img src="images/welcome.svg" width="458" height="352" alt="welcome">
+        <img src="images/vector-3.png" height="78" alt="vector-white">
         <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-<!-- Преимущества начало -->
-      <section class="advantages">
-           <h2 class="visually-hidden">Преимущества</h2>
-             <ul class="advantages-item">
-        <li class="advantages-title">
-          <h3 class="advantages-description">Настоящий городок</h3>
-             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="images/photo-1.jpg" width="800" height="385" alt="Пейзаж.">
-         </li>
-            <li class="advantages-title">
-         <h3 class="advantages-description">Небольшая площадь</h3>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
-         </li>
-         <li class="advantages-title">
-         <h3 class="advantages-description">Красивая дорога</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-         </li>
-         <li class="advantages-title">
-          <h3 class="advantages-description">Мало туристов</h3>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-         </li>
-         <li class="advantages-title">
-            <img src="images/photo-2.jpg" width="800" height="385" alt="Пейзаж.">
-          <h3 class="advantages-description">Там есть мост дьявола</h3>
-            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-       </li>
-       </ul>
-       </section>
-       <section class="services">
-         <h2 class="services-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-          <p class="services-title">Опытный персонал и качественное обслуживание!</p>
-       </section>
-       <section>
+        </div>
+
+        <!-- Преимущества начало -->
+
+        <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
-           <ul class="services-list">
-            <li class="services-item">
-          <img class="logo" src="image.png" width="75" height="72" alt="Логотип."><b class="advantages-title">Жилье</b><p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-      </li>
-      <li class="services-item">
-          <img class="logo" src="image.png" width="74" height="70" alt="Логотип."><b class="advantages-title">Еда</b><p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-      </li>
-      <li class="services-item">
-       <img class="logo" src="image.png" width="64" height="76" alt="Логотип."><b class="advantages-title">Сувениры</b><p>Не только китайского, но и настоящего местного производства!</p>
-        </li>
-        </ul>
-      </section>
-     </main>
-     <!-- Конец раздела с преимуществами -->
-  <img class="logo" src="" width="800" height="385" alt="Логотип.">
-  <section class="advantages">
-    <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-    <h3>Опытный персонал и качественное обслуживание!</h3>
-  </section>
-<!-- Поиск гостиницы -->
-  <ul class="advantages-list">
-    <li class="advantages-title"></li>
-  </ul>
-  <section>
-       <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-         <button type="submit" value="Поиск гостиницы в седоне"></button>
-      </li>
-</section>
-<!-- Форма поиска конец  -->
-<section>
-  <form>
-    <h2 class="appointment-title">Подпишитесь на рассылку</h2>
-     <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-      <input type="email" placeholder="Ваш e-mail"><button class="button" type="submit">Подписаться</button>
-</form>
-</section>
-<!-- Форма почты конец -->
-  <footer>
-    <section class="footer-social">
-        <ul class="footer-social-list">
-         <li class="footer-social-item">
-          <a class="button" href="#">
-         <span class="visually-hidden">VK</span>
-        </a>
-        </li>
-      <li class="footer-social-item">
-        <a class="button" href="#">
-         <span class="visually-hidden">Telegram</span>
-        </a>
-      </li>
-      <li class="footer-social-item">
-       <a class="button" href="#">
-        <span class="visually-hidden">YouTube</span>
-      </a>
-      </li>
-      </ul>
-      </section>
-<!-- Форма контакты -->
-      <section class="contacts">
-        <a class="contacts-phone" href="tel:+78128121212">7 812 812-12-12</a>
-         <a href="logo"><img src="logo_htmlacademy.svg" width="115" height="33" alt="Логотип."></a>
+          <ul class="advantages-item">
+            <li class="advantages-item-blue">
+              <h3 class="advantages-title">Настоящий городок</h3>
+              <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <img src="images/photo-1.jpg" width="800" height="385" alt="пейзаж.">
+            </li>
+            <li class="advantages-item-light">
+              <h3 class="advantages-title">Небольшая площадь</h3>
+              <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="advantages-item-light-blue">
+              <h3 class="advantages-title">Красивая дорога</h3>
+              <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="advantages-item-light-blue">
+              <h3 class="advantages-title">Мало туристов</h3>
+              <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+            <li class="advantages-item-blue">
+              <img src="images/photo-2.jpg" width="800" height="385" alt="пейзаж.">
+              <h3 class="advantages-title">Там есть мост дьявола</h3>
+              <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            </li>
+          </ul>
+          <section class="services">
+            <h2 class="services-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+            <p class="services-description">Опытный персонал и качественное обслуживание!</p>
+          </section>
         </section>
-  </footer>
- </body>
+
+        <section>
+          <h2 class="visually-hidden">Преимущества</h2>
+          <ul class="services-list">
+            <li class="services-item">
+              <div class="logo-living"></div>
+              <img class="logo" src="images/аdvantage-icon.svg" width="75" height="72" alt="Логотип.">
+                <b class="advantages-title">Жилье</b>
+              <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="services-item">
+              <div class="logo-food"></div>
+              <img class="logo" src="images/аdvantage-icon-1.svg" width="74" height="70" alt="Логотип.">
+                <b class="advantages-title">Еда</b>
+              <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="services-item">
+              <div class="logo-souvenir"></div>
+              <img class="logo" src="images/advantages-icon2.svg" width="64" height="76" alt="Логотип.">
+                <b class="advantages-title">Сувениры</b>
+              <p>Не только китайского, но и настоящего местного производства!</p>
+            </li>
+          </ul>
+        </section>
+
+      <!-- Конец раздела с преимуществами -->
+
+      <section>
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <button type="button" id="search">Поиск гостиницы в седоне</button>
+      </section>
+
+      <!-- Форма поиска конец  -->
+
+      <a href="#"><img src="images/logofoot.jpeg" width="120" height="55" alt="foot."></a>
+
+      <section>
+        <form action="https://echo.htmlacademy.ru"></form>
+        <div class="subscribe-form">
+          <h2 class="appointment-title">Подпишитесь на рассылку</h2>
+          <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <input type="email" placeholder="Ваш e-mail" name="email"><button class="button" type="submit">Подписаться</button>
+        </div>
+        </form>
+      </section>
+    </main>
+
+      <!-- Форма почты конец -->
+
+      <footer>
+        <section class="footer-social">
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+                <span class="visually-hidden"></span>
+                <img src="images/social-2.svg" alt="vk.">
+            </li>
+
+            <li class="footer-social-item">
+                <span class="visually-hidden"></span>
+                <img src="images/social-3.svg" alt="tg.">
+            </li>
+
+            <li class="footer-social-item">
+                <span class="visually-hidden"></span>
+                <img src="images/social-1.svg" alt="yt.">
+            </li>
+          </ul>
+        </section>
+
+        <!-- Форма контакты -->
+
+        <section class="contacts">
+          <a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a>
+          <a href="#"><img src="images/logo-htmlacademy.svg" width="115" height="33" alt="обложка."></a>
+        </section>
+      </footer>
+
+        <!-- Модальное окно начало -->
+
+                      <h2>Поиск гостиницы в Седоне</h2>
+                       <button type="button" class="close">
+                      <img src="image/vector-8.svg" alt="close">
+                     </button>
+                      <label for="start">Дата заезда:</label><input type="date" id="start" name="trip-start" value="2023-07-22" min="2023-01-01" max="2024-01-01">
+                        <p>Мы не можем отправить вас в прошлое.</p>
+                      <label for="start">Дата выезда:</label><input type="date" id="start" name="trip-start" value="2023-07-22" min="2023-01-01" max="2024-01-01">
+                        <p>На эти даты есть свободные номера. Пока есть.</p>
+                        <label for="age">Взрослые:</label>
+                          <input type="number" step="1" min="1" max="100" value="10" id="age" name="age">
+                        <label for="age">Дети:</label>
+                         <input type="number" step="1" min="1" max="100" value="10" id="age" name="age">
+                    </p>
+                    <p>
+                        <button type="submit">Найти</button>
+                    </p>
+           </a>
+        </li>
+
+<!-- Конец модального окна -->
+
+  </body>
 </html>
