--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
 
   <body>
    <header class="page-header">
-    <a><img src="logo.svg" height="55" width="67" alt="Логотип."></a>
+    <a href="#"><img src="images/logo.svg" height="55" width="67" alt="Логотип."></a>
 
 <!-- Начало навигации -->
 
@@ -47,14 +47,13 @@
        </span>
       </a>
     </li>
-    <div class="requestbutton">
-      <li class="navigation-item">
+
+    <li class="navigation-item">
       <button type="button">Хочу сюда!</button>
-      </li>
-      </div>
-     </ul>
-   </nav>
-  </header>
+    </li>
+  </ul>
+</nav>
+</header>
 
 <!-- Конец хедера -->
 
@@ -104,13 +103,13 @@
           <option value="1">Сначала популярное</option>
           <option value="2">Сначала дешевые</option>
           <option value="3">Сначала дорогое</option>
-          <img src="images/vector-7.svg">
+          <div class="decor-arrow"></div>
         </select>
           <ul>
           <li>
-            <a href="#"><img src="images/view.svg"></a>
-            <a href="#"><img src="images/view-1.svg"></a>
-            <a href="#"><img src="images/view-2.svg"></a>
+            <a href="#"><img src="images/viewlist2.svg"></a>
+            <a href="#"><img src="images/viewlist3.svg"></a>
+            <a href="#"><img src="images/viewlist1.svg"></a>
           </li>
           </ul>
         </div>
@@ -128,7 +127,7 @@
         <button class="button">Подробнее</button>
         <button class="button">В избранное</button>
          <p>Рейтинг:8,5</p>
-         <div class="star"></div>
+         <img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
       </li>
        <li>
         <img src="images/hotel-2.jpg" width="300" height="212" alt="Пейзаж.">
@@ -137,7 +136,7 @@
          <button class="button">Подробнее</button>
          <button class="button" disabled>В избранном</button>
           <p>Рейтинг:9,2</p>
-          <div class="star"></div>
+          <img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
        </li>
        <li>
         <img src="images/hotel-3.jpg" width="300" height="212" alt="Пейзаж.">
@@ -146,7 +145,7 @@
           <button class="button">Подробнее</button>
           <button class="button">В избранное</button>
           <p>Рейтинг:6,9</p>
-          <div class="star"></div>
+          <img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
       </li>
       <li>
         <img src="images/hotel-4.jpg" width="300" height="212" alt="Пейзаж.">
@@ -155,8 +154,9 @@
         <button class="button">Подробнее</button>
         <button class="button">В избранное</button>
          <p>Рейтинг:5,0</p>
-         <div class="star"></div>
+         <img src="images/star-3.svg"><img src="images/star-3.svg">
         </li>
+        </ul>
          <ul class="pagination">
         <li><a href="#">1</a></li>
         <li><a href="#">2</a></li>
@@ -180,25 +180,26 @@
 
 <!-- Начало социальные сети -->
 
-<footer>
-  <section class="footer-social">
-    <ul class="footer-social-list">
-      <li class="footer-social-item">
-          <span class="visually-hidden"></span>
-          <img src="images/social-2.svg" alt="vk.">
-      </li>
-
-      <li class="footer-social-item">
-          <span class="visually-hidden"></span>
-          <img src="images/social-3.svg" alt="tg.">
-      </li>
-
-      <li class="footer-social-item">
-          <span class="visually-hidden"></span>
-          <img src="images/social-1.svg" alt="yt.">
-      </li>
-    </ul>
-  </section>
+  <footer>
+        <section class="footer-social">
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="button" href="#">
+                <span class="visually-hidden">VK</span>
+                </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="#">
+                <span class="visually-hidden">Telegram</span>
+                </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="button" href="#">
+                <span class="visually-hidden">YouTube</span>
+              </a>
+            </li>
+          </ul>
+        </section>
 
 <!-- Список контакты -->
 
