--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <!-- Конец шапки -->
 
   <body>
+    <div class="page-container">
     <header class="page-header">
-      <div class="page-container">
        <a href="#"><img src="images/logo.svg" width="120" height="55" alt="logo."></a>
 
       <!-- Начало навигации -->
@@ -59,13 +59,15 @@
     <!-- Конец шапки -->
       <main class="main-container main-index">
         <div class="page-container">
+          <section class="text-sedona">
         <div class="welcome">
-        <h1 class="visually-hidden">Седона</h1>
         <img src="images/welcome.svg" width="458" height="352" alt="welcome">
         <div class="divider">
+          <h1 class="sedona-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
           <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </div>
       </div>
+    </section>
 
         <!-- Преимущества начало -->
 
@@ -95,15 +97,17 @@
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             </li>
           </ul>
+
           <section class="services">
             <h2 class="services-title">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
             <p class="services-description">Опытный персонал и качественное обслуживание!</p>
           </section>
         </section>
 
-        <section>
+        <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="services-list">
+
             <li class="services-item">
                 <b class="advantages-title-living">Жилье</b>
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
@@ -116,23 +120,24 @@
                 <b class="advantages-title-souvenirs">Сувениры</b>
               <p>Не только китайского, но и настоящего местного производства!</p>
             </li>
+
           </ul>
         </section>
 
       <!-- Конец раздела с преимуществами -->
 
-      <section>
-        <h2>Заинтересовались?</h2>
+      <section class="appointment">
+        <h2 class="appointment-date">Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <button type="button" id="search">Поиск гостиницы в седоне</button>
+        <button type="button" id="search">Поиск гостиницы в Седоне</button>
       </section>
 
       <!-- Форма поиска конец  -->
 
-      <section>
+      <section class="subscribe">
         <form action="https://echo.htmlacademy.ru">
         <div class="subscribe-form">
-          <h2 class="appointment-title">Подпишитесь на рассылку</h2>
+          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
           <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
           <input type="email" placeholder="Ваш e-mail" name="email"><button class="button" type="submit">Подписаться</button>
         </div>
@@ -140,7 +145,9 @@
       </section>
     </div>
     </main>
+
       <!-- Форма почты конец -->
+
       <footer>
         <div class="page-container">
         <section class="footer-social">
@@ -172,9 +179,13 @@
         </div>
       </footer>
         <!-- Модальное окно начало -->
-                      <h2>Поиск гостиницы в Седоне</h2>
+
+        <div class="modal-container">
+          <div class="modal modal-auth">
+            <section class="modal-content">
+                      <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
                        <button type="button" class="close"><img src="images/cross.svg" alt="close"></button>
-                      <label for="start">Дата заезда:</label><input type="date" id="start" name="trip-start" value="2023-07-22" min="2023-01-01" max="2024-01-01">
+                       <label for="start">Дата заезда:</label><input type="date" id="start" name="trip-start" value="2023-07-22" min="2023-01-01" max="2024-01-01">
                         <div class="calendar"></div> <p>Мы не можем отправить вас в прошлое.</p>
                       <label for="start">Дата выезда:</label><input type="date" id="start" name="trip-start" value="2023-07-22" min="2023-01-01" max="2024-01-01">
                         <div class="calendar"></div> <p>На эти даты есть свободные номера. Пока есть.</p>
@@ -186,8 +197,12 @@
                     <p>
                         <button type="submit">Найти</button>
                     </p>
-           </a>
-        </li>
+          </a>
+         </li>
+        </section>
+       </div>
+     </div>
+    </div>
 
 <!-- Конец модального окна -->
 
