--- a/catalog.html
+++ b/catalog.html
@@ -19,21 +19,21 @@
      <nav class="navigation">
        <ul class="navigation-list">
         <li class="navigation-item">
-         <a class="navigation-link" href="index.html">Главная</a>
+         <a class="navigation-link-1" href="index.html">Главная</a>
         </li>
         <li class="navigation-item">
-         <a class="navigation-link" href="index.html">О Cедоне</a>
+         <a class="navigation-link-2" href="index.html">О Cедоне</a>
         </li>
         <li class="navigation-item">
-         <a class="navigation-link" href="#">Гостиницы</a>
+         <a class="navigation-link-3" href="#">Гостиницы</a>
         </li>
         </ul>
 
 <!-- Навигация поиска -->
 
-<ul class="navigation-list">
+<ul class="navigation-list-buttons">
   <li class="navigation-item .search">
-    <a class="navigation-link" href="#search"><img src="images/search.svg">
+    <a class="navigation-link-item" href="#search"><img src="images/search.svg">
       <span class="visually-hidden">
         Поиск.
     </span>
@@ -43,14 +43,14 @@
   <!-- Конец модального окна -->
 
   <li class="navigation-item .favourites">
-    <a class="navigation-link" href="#heart"><img src="images/heart.svg">
+    <a class="navigation-link-item" href="#heart"><img src="images/heart.svg">
       <span class="visually-hidden">
         Избранное.
       </span>
     </a>
   </li>
 
-  <li class="navigation-item">
+  <li class="navigation-item-buttons">
     <button type="button">Хочу сюда!</button>
   </li>
 </ul>
@@ -61,7 +61,6 @@
 <!-- Конец хедера -->
 
         <main>
-          <div class="page-container">
         <h1>Гостиницы Седоны</h1>
          <ul class="navigation-list">
           <div class="home">
@@ -126,7 +125,7 @@
           <section>
        <h2 class="visually-hidden">Список страниц</h2>
       <ul class="catalog-list">
-      <li>
+      <li class="hotel-card-1">
         <img src="images/hotel-1.jpg" width="300" height="212" alt="Пейзаж.">
       <h3>Amara Resort & Spa</h3>
        <p>Гостиница</p><p>От 4000 ₽</p>
@@ -135,7 +134,7 @@
          <p>Рейтинг:8,5</p>
          <img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
       </li>
-       <li>
+       <li class="hotel-card-2">
         <img src="images/hotel-2.jpg" width="300" height="212" alt="Пейзаж.">
        <h3>Villas at Poco Diablo</h3>
         <p>Гостиница</p><p>От 5000 ₽</p>
@@ -144,7 +143,7 @@
           <p>Рейтинг:9,2</p>
           <img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
        </li>
-       <li>
+       <li class="hotel-card-3">
         <img src="images/hotel-3.jpg" width="300" height="212" alt="Пейзаж.">
         <h3>Desert Quail Inn</h3>
          <p>Гостиница</p><p>От 2500 ₽</p>
@@ -153,7 +152,7 @@
           <p>Рейтинг:6,9</p>
           <img src="images/star-3.svg"><img src="images/star-3.svg"><img src="images/star-3.svg">
       </li>
-      <li>
+      <li class="hotel-card-4">
         <img src="images/hotel-4.jpg" width="300" height="212" alt="Пейзаж.">
        <h3>GreenTree Inn</h3>
         <p>Гостиница</p><p>От 1500 ₽</p>
@@ -215,7 +214,7 @@
    <a class="contacts-phone" href="tel:+78128121212">+7(812)-12-12</a>
     <a href="logo"><img src="images/logo-htmlacademy.svg" width="115" height="33" alt="Логотип."></a>
 </section>
-  </div>
   </footer>
+</div>
  </body>
 </html>
