--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
       <nav class="navigation">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Главная</a>
+            <a class="navigation-link-1" href="#">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">О Cедоне</a>
+            <a class="navigation-link-2" href="#">О Cедоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            <a class="navigation-link-3" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
 
         <!-- Навигация поиска -->
 
-        <ul class="navigation-list">
+        <ul class="navigation-list-buttons">
           <li class="navigation-item .search">
             <a class="navigation-link" href="#search"><img src="images/search.svg">
               <span class="visually-hidden">
@@ -49,7 +49,7 @@
             </a>
           </li>
 
-          <li class="navigation-item">
+          <li class="navigation-item-buttons">
             <button type="button">Хочу сюда!</button>
           </li>
         </ul>
@@ -58,7 +58,6 @@
     </header>
     <!-- Конец шапки -->
       <main class="main-container main-index">
-        <div class="page-container">
           <section class="text-sedona">
         <div class="welcome">
         <img src="images/welcome.svg" width="458" height="352" alt="welcome">
@@ -87,7 +86,7 @@
               <h3 class="advantages-title">Красивая дорога</h3>
               <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="advantages-item-light-blue">
+            <li class="advantages-item-light-blue-2">
               <h3 class="advantages-title">Мало туристов</h3>
               <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
@@ -108,19 +107,18 @@
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="services-list">
 
-            <li class="services-item">
+            <li class="services-item-1">
                 <b class="advantages-title-living">Жилье</b>
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
-            <li class="services-item">
+            <li class="services-item-2">
                 <b class="advantages-title-food">Еда</b>
               <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="services-item">
+            <li class="services-item-3">
                 <b class="advantages-title-souvenirs">Сувениры</b>
               <p>Не только китайского, но и настоящего местного производства!</p>
             </li>
-
           </ul>
         </section>
 
@@ -149,7 +147,6 @@
       <!-- Форма почты конец -->
 
       <footer>
-        <div class="page-container">
         <section class="footer-social">
           <ul class="footer-social-list">
             <li class="footer-social-item-vk">
@@ -176,8 +173,8 @@
           <a class="contacts-phone" href="tel:+78128121212">+7(812)812-12-12</a>
           <a href="#"><img src="images/logo-htmlacademy.svg" width="115" height="33" alt="обложка."></a>
         </section>
-        </div>
       </footer>
+    </div>
         <!-- Модальное окно начало -->
 
         <div class="modal-container">
