--- a/catalog.html
+++ b/catalog.html
@@ -55,7 +55,6 @@
   </li>
 </ul>
 </nav>
-</div>
 </header>
 
 <!-- Конец хедера -->
@@ -173,7 +172,7 @@
 
 <!-- Начало формы подписки -->
 
-  <section class="subscribe">
+  <section class="subscribe-2">
     <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
       <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
       <form action="#" method="post">
@@ -181,7 +180,6 @@
       <button type="submit">Подписаться</button>
     </form>
   </section>
-   </div>
   </main>
 
 <!-- Начало социальные сети -->
