--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
           </li>
         </ul>
       </nav>
-      </div>
     </header>
     <!-- Конец шапки -->
       <main class="main-container main-index">
@@ -74,8 +73,10 @@
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages-item">
             <li class="advantages-item-blue">
+              <div style>
               <h3 class="advantages-title">Настоящий городок</h3>
               <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            </div>
               <img src="images/photo-1.jpg" width="800" height="385" alt="пейзаж.">
             </li>
             <li class="advantages-item-light">
@@ -141,7 +142,6 @@
         </div>
         </form>
       </section>
-    </div>
     </main>
 
       <!-- Форма почты конец -->
