сетка крупных блоков страниц

--- a/index.html
+++ b/index.html
@@ -93,8 +93,10 @@
             </li>
             <li class="advantages-item-blue">
               <img src="images/photo-2.jpg" width="800" height="385" alt="пейзаж.">
+              <div style>
               <h3 class="advantages-title">Там есть мост дьявола</h3>
               <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </div>
             </li>
           </ul>
 
